<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">SEAdmin</string>
    <string name="activity_name">SEAdmin</string>

    <string name="device_admin_label">SE Android Settings Admin</string>
    <string name="device_admin_desc">This app is the reference implementation
        for an Device Admin app that can control SELinux and SE Android MMAC
        settings and policies.</string>

    <!-- Used in home page screen -->
    <string name="selinux_disabled_fragment_title">SELinux Disabled</string>
    <string name="selinux_not_enabled">SELinux is not enabled</string>

    <string name="selinux_admin_title">SELinux Administration</string>
    <string name="mmac_admin_title">SE Android MMAC Administration</string>
    <string name="selinux_boolean_fragment_title">Booleans</string>

    <!-- Used in Enforcing Fragment -->
    <string name="enable_admins_cat">Enable admin</string>

    <string name="device_admin_cb_title">Device administrator</string>
    <string name="device_admin_cb_summary">Allow SEAdmin to become a Device Admin. This is required for the app to function.</string>

    <string name="selinux_cat">SELinux capabilities</string>

    <string name="selinux_admin_cb_title">SELinux admin</string>
    <string name="selinux_admin_cb_summary">Allow SEAdmin to become a SELinux Admin. This is required for the app to set SELinux settings.</string>

    <string name="selinux_enforcing_cb_title">Enforce SELinux policy</string>
    <string name="selinux_enforcing_cb_summaryChecked">SELinux in enforcing mode</string>
    <string name="selinux_enforcing_cb_summaryUnchecked">SELinux in permissive mode</string>
    <string name="selinux_enforcing_cb_summaryDisabled">Unable to query mode of SELinux</string>

    <string name="selinux_reload_title">Reload SELinux policy</string>
    <string name="selinux_restore_title">Restore default SELinux policy</string>

    <string name="propertycontexts_reload_title">Reload Property Contexts policy</string>
    <string name="propertycontexts_restore_title">Restore default Property Contexts policy</string>

    <string name="filecontexts_reload_title">Reload File Contexts policy</string>
    <string name="filecontexts_restore_title">Restore default File Contexts policy</string>

    <string name="seappcontexts_reload_title">Reload SEApp Contexts policy</string>
    <string name="seappcontexts_restore_title">Restore default SEApp Contexts policy</string>

    <string name="seandroid_cat">SE Android MMAC capabilities</string>

    <string name="mmac_admin_cb_title">SE Android MMAC admin</string>
    <string name="mmac_admin_cb_summary">Allow SEAdmin to become a MMAC Admin. This is required for the app to set MMAC settings.</string>

    <string name="mmac_enforcing_cb_title">Enforce MMAC policy</string>
    <string name="mmac_enforcing_cb_summaryChecked">MMAC in enforcing mode</string>
    <string name="mmac_enforcing_cb_summaryUnchecked">MMAC in permissive mode</string>
    <string name="mmac_enforcing_cb_summaryDisabled">Unable to query mode of MMAC</string>

    <string name="mmac_reload_title">Reload MMAC policy</string>

    <string name="mmac_restore_title">Restore default MMAC policy</string>

    <string name="ext_storage_unavail">SDcard unavailable</string>

    <!-- Used in Boolean Fragment -->
    <string name="selinuxBooleans_title">SELinux Booleans</string>
    <string name="selinuxBooleans_err_selinuxDisabled">SELinux is not enabled on this device.</string>
    <string name="selinuxBooleans_err_notDeviceAdmin">SEAdmin is not yet a Device Admin. Go to the Enforcing screen to enable.</string>
    <string name="selinuxBooleans_err_notSELinuxAdmin">SEAdmin is not yet a SELinux Admin. Go to the Enforcing screen to enable.</string>
    <string name="selinuxBooleans_err_getBooleans">Error occurred while retrieving booleans</string>
    <string name="selinuxBooleans_err_noBooleans">No SELinux booleans found</string>

</resources>

